# pylect

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml
docs/: lectionary.csv  sunday_lectionary.csv
src/: main.py  psalter.py
src/lectionary/: cli.py  constants.py  esv.py  lectionary.csv  lectionary.py  main.py  psalter.json  psalter.py  utils.py
src/psalter/: psalter.txt
src/pylect/: __main__.py  cli.py  constants.py  esv.py  holyday.py  lectionary.json  lectionary.py  main.py  psalter.json  psalter.py  psalter_raw.json
src/pylect/data/: lectionary.json  psalter.json
tests/: test_lectionary.py  test_psalter.py
