[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pylect"
version = "1.3.0"
dependencies = [
    "black",
    "pylint",
    "pyperclip",
    "pytest",
    "python-dateutil",
    "python-dotenv",
    "requests",
]
authors = [{ name = "William Wingate", email = "wtwingate@gmail.com" }]
description = "Tools for working with lectionaries and liturgical calendars."
readme = "README.md"
license = { file = "LICENSE.txt" }

[project.urls]
Repository = "https://github.com/wtwingate/pylect"

[project.scripts]
pylect = "pylect.cli:main"

[tool.black]
line-length = 79
